--- a/src/components/Journal/Journal.css
+++ b/src/components/Journal/Journal.css
@@ -1,40 +1,23 @@
-.categories {
+.JournalHome {
+    display: grid;
+    grid-template: "header header" "categories journals";
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 60px 1fr;
+}
+
+.JournalHome header {
+    grid-area: header;
+    text-align: center;
+    margin: 10px;
+}
+
+.JournalHome .categories-nav {
     grid-area: categories;
     margin: 10px auto;
+    padding: 5px 10px;
 }
-  
-.categories > .category {
-      background-color: rgb(187, 182, 182);
-      font-size: 1em;
-      margin-bottom: 5px;
-      padding: 5px 10px;
-      text-align: center;
-}
-  
-.journals {
+
+.JournalHome .journals {
     grid-area: journals;
-    margin: 10px 20px;
-}
-  
-.journals > .journal {
-    display: flex;
-    flex-direction: column;
-    background-color: grey;
-    margin: 5px 15px;
-    padding: 10px;
-}
-  
-.journal > .controller {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 5%;
-}
-  
-.journal > .controller > button {
-      padding: 5px 10px;
-      font-size: 1em;
-}
-  
-.journals button {
-    margin-left: 15px;
+    margin: 10px;
 }
