--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -10,6 +10,10 @@
 .Main h2, .Main > header p {
     text-align: center;
 }
+
+.Main > header p {
+    padding: 0 5px;
+}
   
 .Main > header > button {
     display: inline-block;
