added api services, implementing registration and login

--- a/src/components/TopNav/TopNav.css
+++ b/src/components/TopNav/TopNav.css
@@ -16,8 +16,9 @@
     cursor: pointer;
 }
 
-.TopNav .register-login {
+.TopNav .register-login-header {
     display: flex;
     justify-content: space-between;
     width: 110px;
 }
+
