--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,3 +17,27 @@ a {
 button {
   cursor: pointer;
 }
+
+/*
+.video-container {
+  min-width: 100%; 
+  min-height: 100%; 
+
+  
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+*/
+
+.calm-bg-video {
+  position: absolute; 
+ top: 0px;
+ left: 0px;
+ width: 100%;
+ height: 100%;
+ z-index: -1;
+}
