--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -31,13 +31,58 @@ button {
   left: 50%;
   transform: translate(-50%,-50%);
 }
-*/
+
 
 .calm-bg-video {
   position: absolute; 
- top: 0px;
- left: 0px;
- width: 100%;
- height: 100%;
- z-index: -1;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+*/
+
+.video-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+}
+
+.calm-bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .calm-bg-video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .calm-bg-video {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  
+  .video-container {
+    background: url(CalmPoster.PNG) center center / cover no-repeat;
+  }
+  
+
+  .calm-bg-video {
+    display: none;
+  }
 }
