--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,12 +1,14 @@
 .login_form {
-    background-color: rgb(187, 182, 182);
+    background-color: #B0C4DE;
     padding: 20px;
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .login_form > legend {
     text-align: center;
+    font-size: 1.3em;
+    font-weight: 500;
 }
 
 .login_form > div {
@@ -16,6 +18,7 @@
 .login_form > div > label {
     display: inline-block;
     width: 90px;
+    font-weight: 700;
 }
 
 .login_form > button {
@@ -24,6 +27,14 @@
     align-self: flex-end;
     padding: 5px 7px;
     cursor: pointer;
+    background-color: #E6E6FA;
+    color: #757580;
+    font-weight: 500;
+}
+
+.login_form > button:hover {
+    color: #3B3B40;
+    font-weight: 700;
 }
 
 .login_form > .alert {
