--- a/src/components/TopNav/TopNav.css
+++ b/src/components/TopNav/TopNav.css
@@ -9,16 +9,28 @@
     align-items: center;
     height: 60px;
     flex-shrink: 0;
-    background-color: rgb(187, 182, 182);
+    background-color: #E6E6FA;
 }
   
 .TopNav > h1 {
     cursor: pointer;
+    color: #757580;
+}
+
+.TopNav > h1 > a,
+.TopNav .logout-header > a,
+.TopNav .register-login-header > a {
+    color: #757580;
+}
+
+.TopNav .logout-header,
+.TopNav .register-login-header {
+    font-weight: 700;
 }
 
 .TopNav .register-login-header {
     display: flex;
     justify-content: space-between;
-    width: 110px;
+    width: 120px;
 }
 
