--- a/src/components/Journal/JournalMain/JournalMain.css
+++ b/src/components/Journal/JournalMain/JournalMain.css
@@ -25,7 +25,7 @@
     width: 100%;
     min-height: 150px;
     padding: 10px 15px;
-    border: 1px black solid;
+    border: 1px #E6E6FA solid;
 }
 
 .JournalMain > .meditation-content > .content-controller {
