--- a/src/components/MeditationSearch/SearchItem/SearchItem.css
+++ b/src/components/MeditationSearch/SearchItem/SearchItem.css
@@ -1,7 +1,17 @@
 .SearchItem {
     list-style: none;
     margin: 5px auto;
-    border: solid 1px black;
+    border: solid 3px #E6E6FA;
     padding: 5px 10px;
     width: 80%;
+    background-color: transparent;
+
+}
+
+.SearchItem > .item > h4 > a {
+    color: white;
+}
+
+.SearchItem > .item > h4 > a:hover {
+    color: #DEB887;
 }
