--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -15,7 +15,8 @@
     padding: 0 5px;
 }
   
-.Main > header > button {
+.Main > header > button,
+.Main > .about > a > button {
     display: inline-block;
     margin: 40px auto;
     padding: 20px 40px;
@@ -27,7 +28,12 @@
     color: #757580;
 }
 
-.Main > header > button:hover {
+.Main > .about > a > button {
+    display: flex;
+}
+
+.Main > header > button:hover,
+.Main > .about > a > button:hover {
     color: #3B3B40;
 }
   
@@ -44,4 +50,16 @@
 .Main > .about p:nth-child(3) {
     margin: 20px 0;
     text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+    .Main > .about p:nth-child(2) {
+        max-width: 60%;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .Main > .about p:nth-child(2) {
+        max-width: 50%;
+    }
 }
