--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -3,6 +3,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .login_form > legend {
@@ -17,14 +18,13 @@
 
 .login_form > div > label {
     display: inline-block;
-    width: 90px;
+    width: 100px;
     font-weight: 700;
 }
 
 .login_form > button {
     width: 30%;
     margin-top: 10px;
-    align-self: flex-end;
     padding: 5px 7px;
     cursor: pointer;
     background-color: #E6E6FA;
