--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -10,6 +10,7 @@
       padding: 20px;
       display: flex;
       flex-direction: column;
+      align-items: center;
 }
   
 .registration_form > legend {
@@ -24,14 +25,13 @@
   
 .registration_form > div > label {
       display: inline-block;
-      width: 90px;
+      width: 100px;
       font-weight: 700;
 }
   
 .registration_form > button {
       width: 30%;
       margin-top: 10px;
-      align-self: flex-end;
       padding: 5px 7px;
       cursor: pointer;
       background-color: #E6E6FA;
